[package]
name = "ptp"
version = "0.2.2"
authors = ["Tim Ryan <tim@3drobotics.com>"]
description = "Picture Transfer Protocol driver in Rust."
license = "MIT"
homepage = "https://github.com/dronekit/rust-ptp"
repository = "https://github.com/dronekit/rust-ptp"

[dependencies]
libusb = "0.2.2"
byteorder = "0.5.3"
log = "0.3"
time = "0.1"
