[package]
name = "ptp"
version = "0.6.0"
authors = ["Tim Ryan", "Richo Healey"]
description = "Picture Transfer Protocol driver"
keywords = ["camera", "usb"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/3drobotics/rust-ptp"
repository = "https://github.com/3drobotics/rust-ptp"
edition = "2018"

[dependencies]
libusb = "0.3"
byteorder = "0.5.3"
log = "0.3"
time = "0.1"
